  the remainder.  This gives a progression similar to that of NetHack.
* Tone back on the effect of a monster's level on its raw spell damage;
  otherwise Asmodeus cold spell-casting attack could do over twice the damage of
  Master Kaen without cold resistance, which is too much even for overprepared
  characters.
* Pets never displace the player from the stairs when entering a level.

Interface
---------
* More messages for things that used to happen silently:
    - Show message when teleported without teleport control.
    - Show message when searching finds secret doors or corridors.
    - Show messages for and reveal BUC of items that are randomly cursed by e.g.
      the Wizard of Yendor or sitting on a throne with bad luck.
    - Show a message of the identity of whistles and instruments when they are
      discovered on use.
    - Show message when pets or other monsters grow up (from SLASH'EM Extended).
* Make wearing and taking off messages more descriptive, e.g. "You finish taking
  off a +0 leather armor" instead of "You finish taking off your suit."
* Curses on armor, jewelry and eyewear are now revealed when they are worn
  instead of when trying to take them off.
* Skill training progress is now visible in the `#enhance` menu, e.g. "long
  sword [basic] 20%" means the long sword skill is 20% of the way to advancing
  to skilled.
    - Mark skills that have reached their maximum as "MAX", and show it as soon
      as the level is reached.
* Show your character's race, role, gender and alignment when asked to enter a
  name for that character (based on the same change in NetHack4).
* Highlight lit light sources in item listings, e.g. inventory sidebar.
* Adjust `safe_water` and `safe_lava` behavior: they only warn of walking into
  such hazards in your INPUTTED direction, but won't stop you if stunning or
  confusion causes you to stumble sideways into them.
* Show the tombstone on death even if skipping disclosure information.