@@ -273,11 +273,6 @@ extern coord bhitpos;	/* place where throw or zap hits or stops */
 #endif
 #define plur(x) (((x) == 1) ? "" : "s")
 
-#define ARM_BONUS(obj)	(objects[(obj)->otyp].a_ac + (obj)->spe \
-			 /* extra AC point for racial armor */ \
-			 + (is_racial_armor(obj) ? 1 : 0) \
-			 - min((int)greatest_erosion(obj),objects[(obj)->otyp].a_ac))
-
 #define makeknown(x)	discover_object((x),TRUE,TRUE)
 #define distu(xx,yy)	dist2((int)(xx),(int)(yy),(int)u.ux,(int)u.uy)
 #define onlineu(xx,yy)	online2((int)(xx),(int)(yy),(int)u.ux,(int)u.uy)
